--- a/opentld/Makefile
+++ b/opentld/Makefile
@@ -4,7 +4,7 @@ INSTALL_DIR = opentld
 
 SVN_DIR = build/git-opentld/
 SVN_URL = https://github.com/gnebehay/OpenTLD/trunk
-SVN_REVISION = -r HEAD
+SVN_REVISION = -r 167
 SVN_PATCH = patches/diff.patch patches/diff_2.patch
 include $(shell rospack find mk)/svn_checkout.mk
 
