--- a/tld_gui/CMakeLists.txt
+++ b/tld_gui/CMakeLists.txt
@@ -34,7 +34,7 @@ find_package(Qt4 COMPONENTS QtCore QtGui)
 set(TLD_QT_HEADERS src/base_frame.hpp src/ui_baseFrame.h src/base_frame_graphics_view.hpp)
 QT4_WRAP_CPP(TLD_QT_HEADERS_MOC ${TLD_QT_HEADERS})
 set(SRC_FILES src/base_frame.cpp src/base_frame_graphics_view.cpp ${TLD_QT_HEADERS_MOC})
-#include(${QT_USE_FILE})
+include(${QT_USE_FILE})
 
 #-------------------------------------------------------------------------------
 #common commands for building c++ executables and libraries
