add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 *~
+
+opentld/build/
+opentld/installed
+opentld/patched
+opentld/rospack_nosubdirs
+tld_gui/bin/
+tld_gui/build/
+tld_msgs/build/
+tld_msgs/msg_gen/
+tld_msgs/src/tld_msgs
+tld_tracker/bin/
+tld_tracker/build/
+tld_tracker/lib
