Removal of the cvBlobs library and replacement with the "Structural Analysis and Shape Descriptors" functions of OpenCV in OpenTLD (for a compatibility with groovy)

--- a/opentld/Makefile
+++ b/opentld/Makefile
@@ -3,8 +3,8 @@ all: installed
 INSTALL_DIR = opentld 
 
 SVN_DIR = build/git-opentld/
-SVN_URL = https://github.com/gnebehay/OpenTLD/trunk
-SVN_REVISION = -r 167
+SVN_URL = https://github.com/Ronan0912/OpenTLD/trunk
+SVN_REVISION = -r HEAD
 SVN_PATCH = patches/diff.patch patches/diff_2.patch
 include $(shell rospack find mk)/svn_checkout.mk
 
