--- a/tld_tracker/CMakeLists.txt
+++ b/tld_tracker/CMakeLists.txt
@@ -151,9 +151,9 @@ add_executable(tld_gui_node     src/tld_gui_node.cpp
 ## as an example, message headers may need to be generated before nodes
 
 add_dependencies(tld_tracker_node opentld)
-add_dependencies(tld_tracker_node tld_msgs)
+add_dependencies(tld_tracker_node tld_msgs_generate_messages_cpp)
 
-add_dependencies(tld_gui_node tld_msgs)
+add_dependencies(tld_gui_node tld_msgs_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(tld_tracker_node
